CODE-feat-43a8.8: Reworked AllianceStatic to several sweet classes. Also improved Alliance admin pages

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -424,3 +424,12 @@ body.blitz_ {
   font-size: 1.5rem;
   background-color: #222;
 }
+
+tr.highlight:hover {
+  color: lightblue;
+  text-decoration: underline;
+}
+
+tr.highlight.notice:hover {
+   color: #d3ffe6;
+}
