FLEET-feat-43a9.18: Alpha version for MissionExplore (not used yet). Also - support for core_login_reward module. Other misc changes

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -915,6 +915,8 @@ input[type=text].coordinate {
   vertical-align: top;
   text-align: center;
   width: 100%;
+
+  white-space: normal;
 }
 #unit_info_level {
   position: absolute;
