--- a/design/templates/OpenGame/planet_fleet_list.tpl.html
+++ b/design/templates/OpenGame/planet_fleet_list.tpl.html
@@ -9,9 +9,10 @@
     <th>{L_ov_mission}</th>
   </tr>
 
+  <!-- DEFINE $THIS_PLANET = 'a' -->
   <!-- BEGIN fleets -->
   <!-- IF fleets.NUMBER -->
-    <!-- IF fleets.S_FIRST_ROW && $OVERVIEW -->
+    <!-- IF $THIS_PLANET == 'a' && $OVERVIEW -->
       <!-- IF fleets.OV_THIS_PLANET -->
         <tr><th colspan="5" class="c">{L_ov_flying_fleets} {PLANET_NAME} [{PLANET_GALAXY}:{PLANET_SYSTEM}:{PLANET_PLANET}]</th></tr>
       <!-- ENDIF -->
