TEMPLATE-feat-43a11.8: Added Ptl\PtlVariableDecorator class to move number formatting from source code to templates

--- a/design/templates/OpenGame/admin/admin_ptl_test.tpl.html
+++ b/design/templates/OpenGame/admin/admin_ptl_test.tpl.html
@@ -1,5 +1,12 @@
 <h1>Test is <span id="ptl_global_status"></span></h1>
 
+<!-- BEGIN ar -->
+:{ar.DATA}:
+{ar.DATA|num|ceil}
+{ar.DATA|num|round=-2|color}
+<!-- END ar -->
+
+
 <table id="ptl_test_table">
   <tr class="c_c">
     <th>{Конструкция}</th>
