--- a/design/templates/OpenGame/artifacts.tpl.html
+++ b/design/templates/OpenGame/artifacts.tpl.html
@@ -35,9 +35,9 @@
           <!-- IF artifact.LEVEL_MAX && (artifact.LEVEL >= artifact.LEVEL_MAX) -->
             <span class="negative">{L_sys_quantity_maximum}</span>
           <!-- ELSEIF artifact.CAN_BUY <= 0 -->
-            <span class="negative">{L_sys_buy_for} {artifact.COST_TEXT} {L_sys_dark_matter_sh} - {L_sys_eco_lack_dark_matter}</span>
+            <span class="negative">{L_sys_buy_for} {artifact.COST|num|format} {L_sys_dark_matter_sh} - {L_sys_eco_lack_dark_matter}</span>
           <!-- ELSE -->
-            <a href="artifacts.php?action={D_ACTION_BUY}&unit_id={artifact.ID}" class="link positive">{L_sys_buy_for} {artifact.COST_TEXT} {L_sys_dark_matter_sh}</a>
+            <a href="artifacts.php?action={D_ACTION_BUY}&unit_id={artifact.ID}" class="link positive">{L_sys_buy_for} {artifact.COST|num|format} {L_sys_dark_matter_sh}</a>
           <!-- ENDIF -->
         </div>
       </th>
