UBE-fix-43a12.4: Fixed error with 0 moon size in reports. Also some other minor moon tweaks and changes

--- a/design/templates/OpenGame/ube_combat_report.tpl.html
+++ b/design/templates/OpenGame/ube_combat_report.tpl.html
@@ -64,6 +64,9 @@
     <tr>
       <th class="c_c" colspan="3">
         {L_ube_report_info_debris}
+        <!-- IF UBE_IS_SIMULATOR -->
+        {L_ube_report_info_debris_simulator}
+        <!-- ENDIF -->
       </th>
     </tr>
     <!-- BEGIN debris -->
