--- a/design/templates/OpenGame/imperator.tpl.html
+++ b/design/templates/OpenGame/imperator.tpl.html
@@ -15,6 +15,10 @@
         </a>
       </h2>
 
+      <a class="link" href="ranks.php">
+      <h3>{L_rank}: [{PLAYER_RANK_NUMBER}] {PLAYER_RANK_NAME}</h3>
+      <div class="rank rank-emperor rank-{PLAYER_RANK_NUMBER}"></div>
+      </a>
       <h3>{L_sys_gender} {GENDER_TEXT}</h3>
       <!-- IF VACATION -->
       <h3>{L_sys_vacation_in}</h3>
