--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -426,13 +426,13 @@ input[type=text].coordinate {
 }
 
 .i_icon_visible {
-  background-image: url(../../images/icon_eye_visible.png);
+  background-image: url("../../images/icon_eye_visible.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
 
 .i_icon_invisible {
-  background-image: url(../../images/icon_eye_invisible.png);
+  background-image: url("../../images/icon_eye_invisible.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -2866,10 +2866,10 @@ body:not(.no_border_image) [table_title]:before {
   color: #9900ff;
 }
 .birthday:before {
-  content: url(../../images/birthday.png);
+  content: url("../../images/birthday.png");
 }
 .vacation:before { /* Replaces .birthday ! */
-  content: url(../../images/icon_vacation.png);
+  content: url("../../images/icon_vacation.png");
 }
 .vacation {
   color: cyan;
@@ -3700,4 +3700,103 @@ td.error_message {
 .paging .current {
   color: lightblue;
   font-size: 125%;
+}
+
+.rank-table {
+  align-items: flex-start;
+  max-width: 74em;
+  width: auto;
+}
+.rank-table > div {
+  max-width: 9em;
+  margin: 0.3em;
+  padding: 0;
+}
+.rank-table .rank, .rank-emperor {
+  width: 9em;
+  height: 9em;
+}
+.rank-selected {
+  border: 0.3em solid green;
+}
+.rank-selected-not {
+  border: 0.3em solid transparent;
+}
+.rank-nick {
+  display: inline-block;
+  height: 16px;
+  width: 16px;
+  /*height: 1.5em;*/
+  /*width: 1.5em;*/
+}
+/* Force inline-block for nick's rank in Galaxy user popup */
+.user_template .rank-nick {
+  display: inline-block;
+}
+.rank {
+  background-size: 1000% 600%;
+  background-image: url("../../images/ranks_sprite.png");
+}
+.rank.rank-0 {
+  background-position: 0 0;
+}
+.rank.rank-1 {
+  background-position: -200% 0;
+}
+.rank.rank-2 {
+  background-position: -300% 0;
+}
+.rank.rank-3 {
+  background-position: -400% 0;
+}
+.rank.rank-4 {
+  background-position: -600% 0;
+}
+.rank.rank-5 {
+  background-position: -700% 0;
+}
+.rank.rank-6 {
+  background-position: -800% 0;
+}
+.rank.rank-7 {
+  background-position: 0 -200%;
+}
+.rank.rank-8 {
+  background-position: -500% -200%;
+}
+.rank.rank-9 {
+  background-position: -500% -300%;
+}
+.rank.rank-10 {
+  background-position: -600% -300%;
+}
+.rank.rank-11 {
+  background-position: -700% -300%;
+}
+.rank.rank-12 {
+  background-position: 0 -500%;
+}
+.rank.rank-13 {
+  background-position: -100% -500%;
+}
+.rank.rank-14 {
+  background-position: -200% -500%;
+}
+.rank.rank-15 {
+  background-position: -400% -500%;
+}
+.rank.rank-16 {
+  background-position: -500% -500%;
+}
+.rank.rank-17 {
+  background-position: -600% -500%;
+}
+.rank.rank-18 {
+  background-position: -700% -500%;
+}
+.rank.rank-19 {
+  background-position: -800% -500%;
+}
+.rank.rank-20 {
+  background-position: -900% -500%;
 }
