--- a/design/templates/OpenGame/chat_messages.tpl.html
+++ b/design/templates/OpenGame/chat_messages.tpl.html
@@ -15,9 +15,10 @@
 <!-- ENDIF -->
 
 <!-- BEGIN chat -->
-  <div align="left" style='background-color:black; color:white; font-weight: normal;'>
-    <!-- IF chat.TIME -->[{chat.TIME}]&nbsp;<!-- ENDIF --><!-- IF chat.NICK --><span style="font-weight: bold;">{chat.NICK}&gt;&nbsp;</span><!-- ENDIF --><!-- IF chat.TEXT -->{chat.TEXT}<!-- ENDIF -->
-    <!-- IF chat.DISABLE --><span class="warning"><b>{L_chat_timeout}</b></span><!-- ENDIF -->
-    <br>
-  </div>
+<div class="contFS chat_a">
+  <!-- IF chat.TIME --><div class="chat_a_time">[{chat.TIME}]&nbsp;</div><!-- ENDIF -->
+  <!-- IF chat.NICK --><div class="chat_a_nick contFS" nick_stripped="{chat.NICK_STRIPPED}">{chat.NICK}&gt;</div><!-- ENDIF -->
+  <!-- IF chat.TEXT --><div class="chat_a_text">{chat.TEXT}</div><!-- ENDIF -->
+  <!-- IF chat.DISABLE --><div class="warning"><b>{L_chat_timeout}</b></div><!-- ENDIF -->
+</div>
 <!-- END chat -->
