CHAT-fix-43a13.7: Returned bracers to nick inserted into edit string

--- a/design/templates/OpenGame/chat_body.tpl.html
+++ b/design/templates/OpenGame/chat_body.tpl.html
@@ -5,7 +5,7 @@
 
 <script type="text/javascript">
   jQuery(document).on("click", ".chat_a_nick", function () {
-    addSmiley($(this).attr("nick_stripped"));
+    addSmiley("(" + $(this).attr("nick_stripped") + ")");
   });
 </script>
 
